--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <html>
   <head>
     <title>Misc. Labs</title>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="viewport" content="width=600, initial-scale=1">
   </head>
   <body class="main">
-    <p>Hi</p>
+    <div id="site_header">
+      <a href="//www.misclabs.com/">
+        <img id="header_logo" src="misc_labs_logo.svg" onerror="this.src='misc_labs_logo.png'; this.onerror=null;">
+      </a>
+    </div>
   </body>
 </html>
