add Mastodon verification link

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body class="main">
     <div id="site_header">
-      <a href="//www.misclabs.com/">
+      <a href="https://misclabs.itch.io/">
         <img id="header_logo" src="misc_labs_logo.svg" onerror="this.src='misc_labs_logo.png'; this.onerror=null;">
       </a>
+      <a rel="me" href="https://peoplemaking.games/@jess"></a>
     </div>
   </body>
 </html>
