--- a/notebook/easing.html
+++ b/notebook/easing.html
@@ -17,15 +17,13 @@
 	<!-- <div><label for="dmX">X</label><input id="dmX" data-key="x" data-v-id="dmXv" type="range" min="0" max="350" value="0"><label id="dmXv">0</label></div> -->
 	<label for="slctEs">Ease</label><select id="slctEs">
 		<option value="lnr" selected>Linear</option>
-		<option value="smthStrt2">Smooth start 2</option>
-		<option value="smthStrt3">Smooth start 3</option>
-		<option value="smthStrt4">Smooth start 4</option>
-		<option value="smthStop2">Smooth stop 2</option>
-		<option value="smthStop3">Smooth stop 3</option>
-		<option value="smthStop4">Smooth stop 4</option>
-		<option value="smthStep2">Smooth step 2</option>
-		<option value="arch2">Arch 2</option>
-		<option value="bllcrv6">Bell curve 6</option>
+		<option value="mesSmthStrt2">Smooth start 2</option>
+		<option value="mesSmthStrt6">Smooth start 6</option>
+		<option value="mesSmthStop2">Smooth stop 2</option>
+		<option value="mesSmthStop6">Smooth stop 6</option>
+		<option value="mesSmthStep2">Smooth step 2</option>
+		<option value="mesSmthStep6">Smooth step 6</option>
+		<option value="mesArch2">Arch 2</option>
 	</select>
 	<button id="btnPlyPs" type="button">Pause</button>
 </div>
@@ -151,61 +149,23 @@ SmoothStart is a better name than EaseIn; 4 better than Quad (less ambiguity). A
 </div>
 
 <script src="/marked.min.js"></script>
+<script src="/msc.js"></script>
 <script src="/mgl.js"></script>
+<script src="/mes.js"></script>
 <script src="mnb.js"></script>
 <script>
-function lnr(t) { return t }
-function smthStrt2(t) { return t*t; }
-function smthStrt3(t) { return t*t*t; }
-function smthStrt4(t) { return t*t*t*t; }
-function smthStop2(t) { let r=1-t; return 1-r*r; }
-function smthStop3(t) { let r=1-t; return 1-r*r*r; }
-function smthStop4(t) { let r=1-t; return 1-r*r*r*r; }
-function mix(a, b, w, t) { return (1-w)*a + w*b; }
-function crossFade(a, b, t) { return mix(a, b, t, t); }
-function smthStep2(t) { return crossFade(smthStrt2(t), smthStop2(t), t); }
-function arch2(t) { return t*(1-t); }
-function bllcrv6(t) { return smthStop3(t)*smthStrt3(t); }
-
-function newTckr(){
-	let strtS=performance.now()/1000.0-Number.MIN_VALUE
-	let pub={
-		dtS:0,
-		tmS:0,
-		tck:()=>{
-			let t=performance.now()/1000.0-strtS
-			pub.dtS=t-pub.tmS
-			pub.tmS=t
-		}
-	}
-	return pub
-}
-
-function newTwn(durS,strt,end,updtFn,esFn){
-	return {durS,strt,end,updtFn,esFn,tS:0,dir:1.0}
-}
-function tckTwn(twn,dtS){
-	twn.updtFn(twn,dtS)
-	return twn.strt+(twn.end-twn.strt)*twn.esFn(twn.tS/twn.durS)
-}
-function updtPngPng(twn,dtS){
-	twn.tS+=dtS*twn.dir
-	if(twn.tS>twn.durS) {
-		twn.dir=-1.0
-		twn.tS=twn.durS-(twn.tS-twn.durS)
-	} else if(twn.tS<0) {
-		twn.dir=1.0
-		twn.tS=-twn.tS
-	}
-}
+function lnr(t){return t}
 
 window.addEventListener("load", function ldPg(evnt){
 	"use strict"
 	window.removeEventListener(evnt.type,ldPg);
 	mnbRndrMrkdwnByCls('nt')
 	let isPlyng=true
-	let esMp={lnr,smthStrt2,smthStrt3,smthStrt4,smthStop2,smthStop3,smthStop4,smthStep2,arch2,bllcrv6}
-	let twn=newTwn(2, 0, 1, updtPngPng, lnr)
+	let esMp={lnr,mesSmthStrt2,mesSmthStrt6,
+		mesSmthStop2,mesSmthStop6,
+		mesSmthStep2,mesSmthStep6,
+		mesArch2}
+	let twn=mesNewTwn(2, 0, 1, mesUpdtPngPng, lnr)
 	document.querySelector("#slctEs").addEventListener("change",(evnt)=>{
 		evnt.preventDefault()
 		//console.log("target",evnt.target,"currentTarget",evnt.currentTarget)
@@ -224,11 +184,11 @@ window.addEventListener("load", function ldPg(evnt){
 	})
 	let col=[0,1,0, 1]
 	let dc=mglNewDc(document.querySelector("#dm"))
-	let tckr=newTckr() 
+	let tckr=mscNewTckr() 
 	let val=0
 	setInterval(()=>{
 		tckr.tck()
-		if (isPlyng) {val=tckTwn(twn, tckr.dtS)}
+		if (isPlyng) {val=mesTckTwn(twn, tckr.dtS)}
 		dc.begin()
 		dc.rect(170,60,100,100, 0, val, col)
 		dc.rect(280,60,100,100, 0, 1, [val,val,val,1])
