--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html><html><head>
 <title>Misc. Labs</title>
 <link rel="shortcut icon" href="/favicon.ico">
-<meta name="viewport" content="width=600, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="misclabs.css" rel="stylesheet" type="text/css" media="all">
 <style type="text/css">
-	#splsh{position:relative; width:640px; margin:128px auto; padding:0}
-	#splsh img{display:block; margin:0 auto; padding:64px 0; width:288px; height:184}
-	#bgCnvs{position:absolute; top:0; left:0; width:100%; height: 100%}
+	#splsh{
+		position:relative;
+		margin:128px auto;
+		padding:0;
+		width:300px; height:196px;
+	}
+	#splsh img{
+		display:block;
+		margin:0 auto;
+		padding:6px;
+		width:288px;
+		height:184px;
+	}
+	#splsh canvas{
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+	}
 </style>
 </head><body>
 <div id="splsh">
-	<a href="https://misclabs.itch.io/">
-		<img src="misc_labs_logo.svg" onerror="this.src='misc_labs_logo.png'; this.onerror=null;">
-		<canvas id="bgCnvs"></canvas>
+	<a id="splshA" href="https://misclabs.itch.io/">
+		<!-- <img id="splshImg" src="misc_labs_logo.svg" onerror="this.src='misc_labs_logo.png'; this.onerror=null;">
+		<canvas id="bgCnvs"></canvas> -->
+		<noscript>
+			<img src="misc_labs_logo.png">			
+		</noscript>
 	</a>
 </div>
 
