--- a/notebook/css.html
+++ b/notebook/css.html
@@ -4,19 +4,89 @@
 <!-- <link href="/css-mint.min.css" rel="stylesheet" type="text/css" media="all"> -->
 <!-- <link href="/misclabs.css" rel="stylesheet" type="text/css" media="all"> -->
 <style type="text/css">
-p {
-	color: black;
+/*
+color: #272838;
+color: #C7F2A7;
+color: #C1EEFF;
+color: #4E937A;
+color: #F06543;
+
+color:#1a1a1a;
+color:#7a92b3;
+*/
+body{
+background:#272838;
+color:#C7F2A7;
+font-family: Segoe UI, system-ui, -apple-system, sans-serif;
+font-size: 16pt;
+min-width: 300px;
+}
+/* ::selection{ background:#7a92b3; color:#67a9ff } */
+a:link{ color:#C1EEFF; text-decoration:none }
+a:visited{ color:#C1EEFF }
+a:hover{ text-decoration:underline }
+.main{
+	max-width: 64ch;
+	margin:auto;
+	background-color: rgba(1,1,1,0.25);
+}
+/* a:active{ color:#C1EEFF } */
+.splash{
+	position:relative;
+	margin:64px auto;
+	padding:64px 0;
+	min-width: 256px; min-height: 144px;
+	max-width: 64ch; max-height: 36ch;
+}
+.splash img{
+	display:block;
+	margin:auto;
+}
+.splash canvas{
+	position:absolute;
+	top:0; left:0;
+	width:100%; height:100%;
+	background-color: rgba(1,1,1,0.25);
+}
+.note{
+	/* background:black; */
 }
 </style>
 </head><body>
-<div class="note">
+<div class="splash">
+	<a href="https://misclabs.itch.io/">
+		<img src="../misc_labs_logo.png">
+		<canvas id="bgCnvs"></canvas>
+	</a>
+</div>
+	
+<div class="note main">
 # CSS Notebook
 
-*Note*: these are just my personal notes and experiments. You're welcome to look and used them, but they're a mess and I don't do a any clean-up.
+## Box Model
+Everything is a box. A box is sized *intrinsicly* (implicitly according to content) or *extrinsicly* (explicit).
+
+The four areas of the box model are content box, padding box, border box, margin box. Scrollbars will occupy the padding space.
+The border edge is the limit of what you can see in a box. `outline` and `box-shadow` properties occupy the margin box.
+
+
+For values that have a top,bottom,left,right values:
+- 0: all four are set
+- 0 1: 0 is top/bottom, 1 is left/right
+- 0 1 2: 0 top, 1 is left/right, 2 is bottom
+- 0 1 2 3: 0 top, 1 right, 2 bottom, 3 left
+
+## References
+
+[Learn CSS! on web.dev](https://web.dev/learn/css)
+
+[Selectors Guide on MDN](https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Selectors)
+
+
 
 ## Tags
 
-For external use `link` tag in `head`. e.g. `<link href="sytle.css" rel="stylesheet" />`
+For external use `link` tag in `head`. e.g. `<link href="sytle.css" rel="stylesheet">`
 
 For embedded use `style` tag in `head`. e.g. `<sytle type="text/css"></sytle>`
 
@@ -30,7 +100,6 @@ For embedded use `style` tag in `head`. e.g. `<sytle type="text/css"></sytle>`
 ### Other SELECTORS
 Attribute: `img[src]` selects `<img src="...">` elements, but not `<img>`
 Pseudo-class: `a:hover`
-[MDN Selectors Guide](https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Selectors)
 
 e.g.
 ```
@@ -39,45 +108,6 @@ p, li, h1 {
 	border: 1px solid black;
 }
 ```
-
-## Box Model
-Most elements can be thought of as boxes. Each box has properties like:
-- `padding`: space around content.
-- `border`: line around the padding.
-- `margin`: space around outside of the border.
-- `width`, `height`:
-- `background`, `background-color`:
-- `color`:
-- `display`: display mode
-
-For values that have a top,bottom,left,right values:
-- 0: all four are set
-- 0 1: 0 is top/bottom, 1 is left/right
-- 0 1 2: 0 top, 1 is left/right, 2 is bottom
-- 0 1 2 3: 0 top, 1 right, 2 bottom, 3 left
-<style type="text/css">
-#boxModel {
-	border:1px solid black;
-	margin:0;
-	padding:0;
-	background-color: red;
-}	
-#boxModel div {
-	margin:8px;
-	border:1px solid red;
-	padding:8px;
-	background-color: green;
-}
-#boxModel div p {
-	margin:0;
-	padding:0;
-	background-color: blue;
-}
-</style>
-<div id="boxModel"><div><p>Content</p></div></div>
-
-[Bookmark](https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics)
-
 </div>
 
 <script src="/marked.min.js"></script>
