update logo filename

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- <img id="splshImg" src="misc_labs_logo.svg" onerror="this.src='misc_labs_logo.png'; this.onerror=null;">
 		<canvas id="bgCnvs"></canvas> -->
 		<noscript>
-			<img src="misc_labs_logo.png">			
+			<img src="misclabs_logo.png">			
 		</noscript>
 	</a>
 </div>
